[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/textures/Light.png" type="Texture" id=2]
[ext_resource path="res://res/fonts/FontLVeryLargeText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/World.gd" type="Script" id=4]
[ext_resource path="res://res/textures/background.png" type="Texture" id=5]
[ext_resource path="res://res/Water2D/water_diffuse.png" type="Texture" id=6]
[ext_resource path="res://res/Water2D/water_normal.png" type="Texture" id=7]
[ext_resource path="res://res/Water2D/water_2D_material.tres" type="Material" id=8]
[ext_resource path="res://res/Water2D/Water2D.gd" type="Script" id=9]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=10]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 639.802, 360 )
texture = ExtResource( 5 )

[node name="Background4" type="Sprite" parent="."]
position = Vector2( 1919.32, 359.841 )
texture = ExtResource( 5 )

[node name="Background3" type="Sprite" parent="."]
position = Vector2( 1919.59, -359.741 )
texture = ExtResource( 5 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 639.832, -359.377 )
texture = ExtResource( 5 )

[node name="Water" type="Sprite" parent="."]
visible = false
modulate = Color( 0.490196, 0.490196, 0.490196, 0.886275 )
material = ExtResource( 8 )
position = Vector2( -156.474, 362.46 )
scale = Vector2( 2.81606, 2.81606 )
texture = ExtResource( 6 )
normal_map = ExtResource( 7 )
script = ExtResource( 9 )

[node name="RNA_nodes" type="Node2D" parent="."]

[node name="Plant_nodes" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Fog" type="Sprite" parent="."]
visible = false
material = SubResource( 1 )
centered = false

[node name="HUD" parent="." instance=ExtResource( 10 )]

[node name="Sun" type="Light2D" parent="."]
position = Vector2( -1412.09, -1012.07 )
scale = Vector2( 1.51914, 1.36375 )
texture = ExtResource( 2 )
texture_scale = 8.28
shadow_enabled = true

[node name="SunTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="LabelDied" type="Label" parent="."]
visible = false
margin_left = 452.489
margin_top = 302.658
margin_right = 796.489
margin_bottom = 406.658
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.858824, 0.00392157, 0.00392157, 1 )
text = "You Died"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="SunTimer" to="." method="_on_SunTimer_timeout"]
